--- a/index.html
+++ b/index.html
@@ -365,19 +365,19 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Ah, skill issue I'm afraid.</h1>
+            <h1>Welcome to my world</h1>
         </header>
         <div class="content">
             <div class="profile-picture-container">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="profile-picture">
-                    <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
+                    <img src="https://pbs.twimg.com/media/GJh0tr7WwAAESbK.jpg:large" alt="Profile Picture">
                 </div>
             </div>
             <div class="intro">
                 <h2>ngleeqthai</h2>
-                <p>social media:</p>
+                <p>Social Media Profiles:</p>
             </div>
             <div class="links">
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
@@ -388,7 +388,7 @@
             </div>
         </div>
         <footer>
-            <p>&copy; WWWWWWWWWWWWWWW</p>
+            <p>&copy; ngleeqthai</p>
         </footer>
     </div>
 
